[project]
name = "replaykit"
version = "0.1.0"
description = "Record and replay mouse, keyboard, and scroll actions for automation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "typer>=0.19.2",
]
keywords = ["automation", "macro", "recorder", "playback", "mouse", "keyboard"]
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
macos = [
    "pyobjc-core>=10.0",
    "pyobjc-framework-Quartz>=10.0",
]

[project.scripts]
replaykit = "replaykit.main:app"

[project.urls]
Homepage = "https://github.com/yourusername/replaykit"
Repository = "https://github.com/yourusername/replaykit"
Issues = "https://github.com/yourusername/replaykit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
